# cppjit

./: CMakeLists.txt  LICENSE.txt  README.md  build-all.sh  circle.yml  cppjitConfig.cmake  missing_features.txt  source-me.sh
.circleci/: config.yml
cmake/: CPPJITConfig.cmake  FindCPPJIT.cmake
cppjit_tmp/: PLACEHOLDER
examples/: build_with_cmake.cpp  clone_kernel.cpp  example_functional.cpp  example_inline_with_explicit_load.cpp  hello_world_jit.cpp  jit_with_clang.cpp  standard_cpp_file_kernel.cpp
examples/cmake_kernel/: CMakeLists.txt  build_with_cmake_kernel.cpp
examples/cpp_kernel/: cpp_kernel.cpp
examples/example_class/: example_class.cpp
include/: kernel.hpp  kernel_impl.cpp  kernel_impl.hpp
include/cppjit/: cppjit.hpp  cppjit_exception.hpp  function_traits.hpp  helper.hpp  kernel.hpp
include/cppjit/builder/: builder.hpp  cmake.hpp  gcc.hpp
include/example_kernels/: kernel.hpp  kernel_impl.cpp  kernel_inline.hpp
scripts/: build-cmake.sh
src/: example.cpp  example_functional.cpp  example_inline.cpp  example_inline_with_explicit_load.cpp
src/example_class/: example_class.cpp  my_class.cpp  my_class.hpp  my_class_interface.hpp
test/: test_cppjit.cpp
